# Raymarcher

./: .gitignore  CMakeLists.txt  CommonDefinitions.cpp  CommonDefinitions.h  README.md  Raymarch.cpp  Raymarch.h  Shading.cpp  Shading.h  Vec.cpp  Vec.h  main.cpp
.github/workflows/: linux-cmake.yml
Objects/: IObject.h  MandelBulb.cpp  MandelBulb.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
unit-tests/: CMakeLists.txt  OBJ_tests.cpp  Raymarch_tests.cpp  unit-tests.cpp  vec_tests.cpp
